[gd_scene load_steps=4 format=3 uid="uid://cptax4sbb3rid"]

[ext_resource type="Script" uid="uid://diem2x8vecdg7" path="res://Scripts/GameOverScreen.gd" id="1_gameover"]
[ext_resource type="FontFile" uid="uid://bxjjnmu2l6exg" path="res://Sprites/fonts/Pixeled.ttf" id="2_font"]

[sub_resource type="Theme" id="Theme_1"]
default_font = ExtResource("2_font")
default_font_size = 16

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameover")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1")

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "MENU"
